<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TitleText">Login</string>
    <string name="LoginPlaceholder">Login Name</string>
    <string name="Password">Password</string>
    <string name="SwitchText">What does this do?</string>
    <string name="RadioButtonText">Radio Button</string>
    <string name="CheckBoxText">Checkbox</string>
    <string name="LogInButton">Log In</string>
    <string name="StartChat">Start Chat</string>
    <string name="SendMessage">Send</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="title_activity_testtest">TesttestActivity</string>

</resources>
